<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">REC Office Time</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_main_activity2">MainActivity2</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_activity_time_browser">REC Office Time</string>
    <string name="title_activity_settings">Settings</string>

    <string name="weekend_check">Check during weekend:</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="intervals_out_work">Intervals before work start:</string>
    <string name="intervals_in_work">Intervals during work:</string>

    <string name="save">Save</string>
    <string name="cancel">Cancel</string>

    <string name="interval0_6">0-6h: </string>
    <string name="interval7_10">7-10h: </string>
    <string name="interval11_14">11-14h: </string>
    <string name="interval15_18">15-18h: </string>
    <string name="interval19_23">19-23h: </string>

    <string name="interval0_6_out_value">interval0_6_out_value</string>
    <string name="interval7_10_out_value">interval7_10_out_value</string>
    <string name="interval11_14_out_value">interval11_14_out_value</string>
    <string name="interval15_18_out_value">interval15_18_out_value</string>
    <string name="interval19_23_out_value">interval19_23_out_value</string>
    <string name="interval0_6_in_value">interval0_6_in_value</string>
    <string name="interval7_10_in_value">interval7_10_in_value</string>
    <string name="interval11_14_in_value">interval11_14_in_value</string>
    <string name="interval15_18_in_value">interval15_18_in_value</string>
    <string name="interval19_23_in_value">interval19_23_in_value</string>



    <string name="defined_networks">Defined networks</string>
    <string name="plus">+</string>
    <string name="ok">OK</string>

    <string name="warning">You have unsaved changes!</string>
    <string name="warning_message">Are you sure you want to continue?</string>
    <string name="drop_changes">Continue</string>
    <string name="back">Back</string>

    <string name="work_days">Work days </string>
    <string name="diff">Diff </string>

    <string name="hours">hours</string>

    <string name="conf">com.rec.kuciaba.andrzej.officetime.conf_file</string>


</resources>
