<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.rec.kuciaba.andrzej.officetime.Settings">
<ScrollView
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:isScrollContainer="true">
    <!--<TextView android:text="@string/hello_world" android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content" />-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
        <!--<LinearLayout-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_centerHorizontal="true">-->
            <!--<NumberPicker-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:id="@+id/number_picker"-->
                <!--/>-->
            <!--</LinearLayout>-->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="?android:dividerHorizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intervals_out_work"
                android:background="#336699"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval0_6"
                android:id="@+id/interval_out_00_06"
                android:onClick="intervalClicked"
                android:clickable="true"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval7_10"
                android:id="@+id/interval_out_07_10"
                android:onClick="intervalClicked"
                android:clickable="true"
                android:textSize="20dp"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval11_14"
                android:id="@+id/interval_out_11_14"
                android:onClick="intervalClicked"
                android:clickable="true"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval15_18"
                android:id="@+id/interval_out_15_18"
                android:onClick="intervalClicked"
                android:clickable="true"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval19_23"
                android:id="@+id/interval_out_19_23"
                android:onClick="intervalClicked"
                android:clickable="true"
                android:textSize="20dp"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:showDividers="middle"
            android:divider="?android:dividerHorizontal">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/intervals_in_work"
                android:background="#336699"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval0_6"
                android:id="@+id/interval_in_00_06"
                android:onClick="intervalClicked"
                android:clickable="true"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval7_10"
                android:id="@+id/interval_in_07_10"
                android:onClick="intervalClicked"
                android:clickable="true"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval11_14"
                android:editable="false"
                android:elegantTextHeight="false"
                android:id="@+id/interval_in_11_14"
                android:onClick="intervalClicked"
                android:clickable="true"
                android:textSize="20dp"/>


            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval15_18"
                android:id="@+id/interval_in_15_18"
                android:onClick="intervalClicked"
                android:clickable="true"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/interval19_23"
                android:id="@+id/interval_in_19_23"
                android:onClick="intervalClicked"
                android:clickable="true"
                android:textSize="20dp"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/weekend_check"
            android:background="#336699"
            android:textSize="20dp"/>
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/saturday"
            android:id="@+id/checkbox_saturday" />
        <CheckBox
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sunday"
            android:id="@+id/checkbox_sunday" />
        </LinearLayout>
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:showDividers="middle"
        android:divider="?android:dividerHorizontal">
                <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="fill_parent"
                android:background="#336699"
                android:layout_weight="6">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/defined_networks"
                        android:id="@+id/networks_label"
                        android:textSize="20dp"/>
                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="fill_parent"
                    android:background="#336699"
                    android:layout_weight="1"

                    >
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/plus"
                        android:layout_centerInParent="true"
                        android:visibility="invisible"
                        />
                </RelativeLayout>
                </LinearLayout>
            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="list_of_networks"
                android:id="@+id/list_of_networks"
                android:textSize="16dp"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/save"
                android:id="@+id/button_save" />
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel"
                android:id="@+id/button_cancel" />
        </LinearLayout>


    </LinearLayout>
</ScrollView>
</RelativeLayout>
